--- a/Models/initial_script.ipynb
+++ b/Models/initial_script.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -232,7 +232,8 @@
     "        pred['y'] = [float(format(x, '.6f')) for x in pred['y']]\n",
     "        o, reward, done, info = env.step(pred)\n",
     "        if done:\n",
-    "            print(\"low=\",low_y_cut, \"high=\", high_y_cut,\\\n",
+    "            print(\"low=\",low_y_cut, \"high=\", high_y_cut, \"coeff1=\",\\\n",
+    "                  coeff1, \"coeff2=\", coeff2, \\\n",
     "                  \"r=\",info[\"public_score\"])\n",
     "            break\n",
     "#         if o.features.timestamp[0] % 100 == 0:\n",
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +292,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "low= -0.085 high= 0.065 r= 0.0209034018658\n"
+      "low= -0.085 high= 0.065 r= 0.0209034018658\n",
+      "low= -0.085 high= 0.07 r= 0.0213959546743\n",
+      "low= -0.085 high= 0.075 r= 0.0216419710708\n",
+      "low= -0.085 high= 0.08 r= 0.0216557887025\n",
+      "low= -0.085 high= 0.085 r= 0.0215369685407\n",
+      "low= -0.08 high= 0.065 r= 0.0212120087397\n",
+      "low= -0.08 high= 0.07 r= 0.0215379611079\n",
+      "low= -0.08 high= 0.075 r= 0.0216506500503\n",
+      "low= -0.08 high= 0.08 r= 0.0215438737015\n",
+      "low= -0.08 high= 0.085 r= 0.0213106869652\n",
+      "low= -0.075 high= 0.065 r= 0.0214506190502\n",
+      "low= -0.075 high= 0.07 r= 0.0215877595609\n",
+      "low= -0.075 high= 0.075 r= 0.0215442626819\n",
+      "low= -0.075 high= 0.08 r= 0.0212951988375\n",
+      "low= -0.075 high= 0.085 r= 0.020927671549\n",
+      "low= -0.07 high= 0.065 r= 0.021580447962\n",
+      "low= -0.07 high= 0.07 r= 0.0215096098464\n",
+      "low= -0.07 high= 0.075 r= 0.0212877028251\n",
+      "low= -0.07 high= 0.08 r= 0.0208742867317\n",
+      "low= -0.07 high= 0.085 r= 0.0203466129444\n",
+      "low= -0.065 high= 0.065 r= 0.0215203751963\n",
+      "low= -0.065 high= 0.07 r= 0.02120781505\n",
+      "low= -0.065 high= 0.075 r= 0.0207703824355\n",
+      "low= -0.065 high= 0.08 r= 0.0201520782404\n",
+      "low= -0.065 high= 0.085 r= 0.0194247723047\n"
      ]
     }
    ],
@@ -301,6 +326,35 @@
     "y=.075+np.arange(-n,n+1)/(n)*.01\n",
     "for i in [(a,b) for a in x for b in y]:\n",
     "    fitInitialScript(*i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jingguo/anaconda/lib/python3.5/site-packages/ipykernel/__main__.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=2\n",
+    "x=-.075+np.arange(-n,n+1)/(n)*.01\n",
+    "y=.075+np.arange(-n,n+1)/(n)*.01\n",
+    "w=.65+np.arange(-n,n+1)/(n)*.05\n",
+    "z=.95+np.arange(-n,n+1)/(n)*.05\n",
+    "for i in [(c,d) for c in w for d in z]:\n",
+    "    fitInitialScript(-.08,.075,*i)"
    ]
   },
   {
