--- a/Models/initial_script2.ipynb
+++ b/Models/initial_script2.ipynb
@@ -69,8 +69,8 @@
     "model1 = rfr.fit(train, o.train['y'])\n",
     "\n",
     "#https://www.kaggle.com/bguberfain/two-sigma-financial-modeling/univariate-model-with-clip/run/482189\n",
-    "low_y_cut = -0.086093\n",
-    "high_y_cut = 0.093497\n",
+    "low_y_cut = -0.08\n",
+    "high_y_cut = 0.075\n",
     "y_is_above_cut = (o.train.y > high_y_cut)\n",
     "y_is_below_cut = (o.train.y < low_y_cut)\n",
     "y_is_within_cut = (~y_is_above_cut & ~y_is_below_cut)\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -111,45 +111,50 @@
     {
      "data": {
       "text/plain": [
-       "[(-0.080000000000000002, 0.069999999999999993),\n",
-       " (-0.080000000000000002, 0.072499999999999995),\n",
-       " (-0.080000000000000002, 0.074999999999999997),\n",
-       " (-0.080000000000000002, 0.077499999999999999),\n",
-       " (-0.080000000000000002, 0.080000000000000002),\n",
-       " (-0.077499999999999999, 0.069999999999999993),\n",
-       " (-0.077499999999999999, 0.072499999999999995),\n",
-       " (-0.077499999999999999, 0.074999999999999997),\n",
-       " (-0.077499999999999999, 0.077499999999999999),\n",
-       " (-0.077499999999999999, 0.080000000000000002),\n",
-       " (-0.074999999999999997, 0.069999999999999993),\n",
-       " (-0.074999999999999997, 0.072499999999999995),\n",
-       " (-0.074999999999999997, 0.074999999999999997),\n",
-       " (-0.074999999999999997, 0.077499999999999999),\n",
-       " (-0.074999999999999997, 0.080000000000000002),\n",
-       " (-0.072499999999999995, 0.069999999999999993),\n",
-       " (-0.072499999999999995, 0.072499999999999995),\n",
-       " (-0.072499999999999995, 0.074999999999999997),\n",
-       " (-0.072499999999999995, 0.077499999999999999),\n",
-       " (-0.072499999999999995, 0.080000000000000002),\n",
-       " (-0.069999999999999993, 0.069999999999999993),\n",
-       " (-0.069999999999999993, 0.072499999999999995),\n",
-       " (-0.069999999999999993, 0.074999999999999997),\n",
-       " (-0.069999999999999993, 0.077499999999999999),\n",
-       " (-0.069999999999999993, 0.080000000000000002)]"
+       "array([[ 0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ],\n",
+       "       [ 0.00694162,  0.        ],\n",
+       "       ..., \n",
+       "       [ 0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ]], dtype=float32)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[(a,b) for a in x for b in y]"
+    "np.array(o.train[col].fillna(d_mean).loc[y_is_within_cut, xList].values).reshape(-1,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "env = kagglegym.make()\n",
+    "o = env.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "xList=['technical_20','technical_30']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -157,17 +162,16 @@
     {
      "data": {
       "text/plain": [
-       "(array([-0.08  , -0.0775, -0.075 , -0.0725, -0.07  ]),\n",
-       " array([ 0.07  ,  0.0725,  0.075 ,  0.0775,  0.08  ]))"
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=-1, normalize=False)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x,y"
+    "model2.fit(np.array(o.train[col].fillna(d_mean).loc[y_is_within_cut, xList].values).reshape(-1,2), o.train.loc[y_is_within_cut, 'y'])"
    ]
   },
   {
