--- a/Models/initial_script.ipynb
+++ b/Models/initial_script.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -345,6 +345,37 @@
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "low= -0.08 high= 0.075 coeff1= 0.6 coeff2= 0.9 r= 0.0206899014053\n",
+      "low= -0.08 high= 0.075 coeff1= 0.6 coeff2= 0.925 r= 0.0211073710764\n",
+      "low= -0.08 high= 0.075 coeff1= 0.6 coeff2= 0.95 r= 0.0214395770223\n",
+      "low= -0.08 high= 0.075 coeff1= 0.6 coeff2= 0.975 r= 0.0216918932894\n",
+      "low= -0.08 high= 0.075 coeff1= 0.6 coeff2= 1.0 r= 0.0218671910474\n",
+      "low= -0.08 high= 0.075 coeff1= 0.625 coeff2= 0.9 r= 0.0208083666108\n",
+      "low= -0.08 high= 0.075 coeff1= 0.625 coeff2= 0.925 r= 0.0212227224643\n",
+      "low= -0.08 high= 0.075 coeff1= 0.625 coeff2= 0.95 r= 0.0215543095914\n",
+      "low= -0.08 high= 0.075 coeff1= 0.625 coeff2= 0.975 r= 0.0218045995083\n",
+      "low= -0.08 high= 0.075 coeff1= 0.625 coeff2= 1.0 r= 0.0219786170423\n",
+      "low= -0.08 high= 0.075 coeff1= 0.65 coeff2= 0.9 r= 0.0209094442043\n",
+      "low= -0.08 high= 0.075 coeff1= 0.65 coeff2= 0.925 r= 0.0213209097725\n",
+      "low= -0.08 high= 0.075 coeff1= 0.65 coeff2= 0.95 r= 0.0216506500503\n",
+      "low= -0.08 high= 0.075 coeff1= 0.65 coeff2= 0.975 r= 0.021900630008\n",
+      "low= -0.08 high= 0.075 coeff1= 0.65 coeff2= 1.0 r= 0.0220723099549\n",
+      "low= -0.08 high= 0.075 coeff1= 0.675 coeff2= 0.9 r= 0.0209912976043\n",
+      "low= -0.08 high= 0.075 coeff1= 0.675 coeff2= 0.925 r= 0.0214022208671\n",
+      "low= -0.08 high= 0.075 coeff1= 0.675 coeff2= 0.95 r= 0.0217285897698\n",
+      "low= -0.08 high= 0.075 coeff1= 0.675 coeff2= 0.975 r= 0.0219758481269\n",
+      "low= -0.08 high= 0.075 coeff1= 0.675 coeff2= 1.0 r= 0.0221459556487\n",
+      "low= -0.08 high= 0.075 coeff1= 0.7 coeff2= 0.9 r= 0.0210564796717\n",
+      "low= -0.08 high= 0.075 coeff1= 0.7 coeff2= 0.925 r= 0.0214648320396\n",
+      "low= -0.08 high= 0.075 coeff1= 0.7 coeff2= 0.95 r= 0.021788863173\n",
+      "low= -0.08 high= 0.075 coeff1= 0.7 coeff2= 0.975 r= 0.0220334091283\n",
+      "low= -0.08 high= 0.075 coeff1= 0.7 coeff2= 1.0 r= 0.0222026468043\n"
+     ]
     }
    ],
    "source": [
@@ -355,6 +386,36 @@
     "z=.95+np.arange(-n,n+1)/(n)*.05\n",
     "for i in [(c,d) for c in w for d in z]:\n",
     "    fitInitialScript(-.08,.075,*i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jingguo/anaconda/lib/python3.5/site-packages/ipykernel/__main__.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "low= -0.08 high= 0.075 coeff1= 0.8 coeff2= 1.0 r= 0.0222485294416\n"
+     ]
+    }
+   ],
+   "source": [
+    "fitInitialScript(-.08,.075,.8,1.0)"
    ]
   },
   {
