--- a/Models/initial_script.ipynb
+++ b/Models/initial_script.ipynb
@@ -210,7 +210,9 @@
     "    y_is_below_cut = (o.train.y < low_y_cut)\n",
     "    y_is_within_cut = (~y_is_above_cut & ~y_is_below_cut)\n",
     "    model2 = LinearRegression(n_jobs=-1)\n",
-    "    model2.fit(np.array(o.train[col].fillna(d_mean).loc[y_is_within_cut, 'technical_20'].values).reshape(-1,1), o.train.loc[y_is_within_cut, 'y'])\n",
+    "    model2.fit(np.array(o.train[col].fillna(d_mean).\\\n",
+    "                        loc[y_is_within_cut, 'technical_20'].values)\\\n",
+    "               .reshape(-1,1), o.train.loc[y_is_within_cut, 'y'])\n",
     "    #https://www.kaggle.com/ymcdull/two-sigma-financial-modeling/ridge-lb-0-0100659\n",
     "    ymean_dict = dict(o.train.groupby([\"id\"])[\"y\"].median())\n",
     "    \n",
