--- a/Models/initial_script3.ipynb
+++ b/Models/initial_script3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -13,12 +13,13 @@
     "import pandas as pd\n",
     "# from sklearn import linear_model as lm\n",
     "from sklearn.linear_model import Ridge\n",
-    "\n"
+    "from sklearn.ensemble import ExtraTreesRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -82,9 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +151,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jingguo/anaconda/lib/python3.5/site-packages/ipykernel/__main__.py:11: SettingWithCopyWarning: \n",
+      "/Users/jingguo/anaconda/lib/python3.5/site-packages/ipykernel/__main__.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -162,15 +163,24 @@
      "output_type": "stream",
      "text": [
       "Timestamp #1000\n",
+      "-0.314267639621\n",
       "Timestamp #1100\n",
+      "-0.18600701931\n",
       "Timestamp #1200\n",
+      "-0.16783437709\n",
       "Timestamp #1300\n",
+      "0.0145157109423\n",
       "Timestamp #1400\n",
+      "-0.123818855662\n",
       "Timestamp #1500\n",
+      "-0.158982290481\n",
       "Timestamp #1600\n",
+      "-0.204868571962\n",
       "Timestamp #1700\n",
+      "-0.30734319051\n",
       "Timestamp #1800\n",
-      "{'public_score': 0.020525574186682414}\n"
+      "-0.0231854772019\n",
+      "{'public_score': 0.021759011711930613}\n"
      ]
     }
    ],
