--- a/Models/ridge.ipynb
+++ b/Models/ridge.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -161,7 +161,12 @@
       "Timestamp #1500\n",
       "-0.154191280734\n",
       "Timestamp #1600\n",
-      "-0.219956581195\n"
+      "-0.219956581195\n",
+      "Timestamp #1700\n",
+      "-0.305116343877\n",
+      "Timestamp #1800\n",
+      "-0.00946003591179\n",
+      "{'public_score': 0.020525574186682414}\n"
      ]
     }
    ],
