--- a/Models/initial_script3.ipynb
+++ b/Models/initial_script3.ipynb
@@ -244,12 +244,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def fitInitialScript3(coeff1=.65, coeff2=.95):\n",
+    "    def get_weighted_y(series):\n",
+    "        id, y = series[\"id\"], series[\"y\"]\n",
+    "    # return 0.95 * y + 0.05 * ymean_dict[id] if id in ymean_dict else y\n",
+    "        return coeff2 * y + (1-coeff2) * ymedian_dict[id] if id in ymedian_dict else y\n",
+    "\n",
+    "    while True:\n",
+    "        test = o.features[col]\n",
+    "        n = test.isnull().sum(axis=1)\n",
+    "        for c in test.columns:\n",
+    "            test[c + '_nan_'] = pd.isnull(test[c])\n",
+    "        test = test.fillna(d_mean)\n",
+    "        test['znull'] = n\n",
+    "        pred = o.target\n",
+    "    #observation.features.fillna(mean_values, inplace=True)\n",
+    "    # test_x = np.array(observation.features[cols_to_use].values)\n",
+    "    # observation.target.y = model.predict(test_x).clip(low_y_cut, high_y_cut)\n",
+    "    \n",
+    "        index1 = test.query(\"technical_30 == 0.0 & technical_20 == 0.0\").index\n",
+    "        index2 = test.query(\"technical_30 != 0.0 & technical_20 == 0.0\").index\n",
+    "        index3 = test.query(\"technical_30 == 0.0 & technical_20 != 0.0\").index\n",
+    "        index4 = test.query(\"technical_30 != 0.0 & technical_20 != 0.0\").index\n",
+    "    \n",
+    "        if len(index1) > 0:\n",
+    "            pred.loc[index1, 'y'] = ridge1.predict\\\n",
+    "            (test.loc[index1, [\"fundamental_11\"]].values).clip(low_y_cut, high_y_cut)\n",
+    "        if len(index2) > 0:\n",
+    "            pred.loc[index2, 'y'] = ridge2.predict\\\n",
+    "            (test.loc[index2, ['technical_30', 'fundamental_11']].values).clip(low_y_cut, high_y_cut)\n",
+    "        if len(index3) > 0:\n",
+    "            pred.loc[index3, 'y'] = ridge3.predict\\\n",
+    "            (test.loc[index3, ['technical_20', 'fundamental_11']].values).clip(low_y_cut, high_y_cut)\n",
+    "        if len(index4) > 0:\n",
+    "            pred.loc[index4, 'y'] = ridge4.predict\\\n",
+    "            (test.loc[index4, ['technical_30', 'technical_20', 'fundamental_11']].values).clip(low_y_cut, high_y_cut)\n",
+    "\n",
+    "    ## weighted y using average value\n",
+    "        pred['y'] = (model1.predict(test).clip(low_y_cut, high_y_cut) * coeff1) + \\\n",
+    "                    pred['y'] * (1-coeff1)\n",
+    "        pred['y'] = pred.apply(get_weighted_y, axis = 1)\n",
+    "    \n",
+    "    #observation.target.fillna(0, inplace=True)\n",
+    "    #target = observation.target\n",
+    "#         timestamp = o.features[\"timestamp\"][0]\n",
+    "#         if timestamp % 100 == 0:\n",
+    "#             print(\"Timestamp #{}\".format(timestamp))\n",
+    "#             print(reward)\n",
+    "\n",
+    "        o, reward, done, info = env.step(pred)\n",
+    "        if done:\n",
+    "            break\n",
+    "    \n",
+    "    print(info)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "n=5\n",
+    "x=-.075+np.arange(-n,n+1)/(n)*.01\n",
+    "y=.075+np.arange(-n,n+1)/(n)*.01\n",
+    "w=.65+np.arange(-n,n+1)/(n)*.05\n",
+    "z=.95+np.arange(-n,n+1)/(n)*.05\n",
+    "for i in w:\n",
+    "    fitInitialScript3(i,.95)"
+   ]
   }
  ],
  "metadata": {
