--- a/Models/initial_script2.1.ipynb
+++ b/Models/initial_script2.1.ipynb
@@ -41,6 +41,8 @@
     }
    ],
    "source": [
+    "#LB .0137110\n",
+    "\n",
     "import kagglegym\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -185,6 +187,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
