--- a/Models/initial_script3.2.ipynb
+++ b/Models/initial_script3.2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -107,8 +107,8 @@
     "# cols_to_use = ['technical_30', 'technical_20', 'fundamental_11']\n",
     "\n",
     "# Observed with histograns:\n",
-    "low_y_cut = -0.086093\n",
-    "high_y_cut = 0.093497\n",
+    "low_y_cut = -0.08\n",
+    "high_y_cut = 0.075\n",
     "\n",
     "y_is_above_cut = (o.train.y > high_y_cut)\n",
     "y_is_below_cut = (o.train.y < low_y_cut)\n",
@@ -144,13 +144,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jingguo/anaconda/lib/python3.5/site-packages/ipykernel/__main__.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timestamp #1000\n",
+      "-0.314267639621\n",
+      "Timestamp #1100\n",
+      "-0.18600701931\n",
+      "Timestamp #1200\n",
+      "-0.16783437709\n",
+      "Timestamp #1300\n",
+      "0.0145157109423\n",
+      "Timestamp #1400\n",
+      "-0.123818855662\n",
+      "Timestamp #1500\n",
+      "-0.158982290481\n",
+      "Timestamp #1600\n",
+      "-0.204868571962\n",
+      "Timestamp #1700\n",
+      "-0.30734319051\n",
+      "Timestamp #1800\n",
+      "-0.0231854772019\n",
+      "{'public_score': 0.021759011711930613}\n"
+     ]
+    }
+   ],
    "source": [
-    "coeff1 = .65\n",
+    "coeff1 = .6\n",
     "coeff2 =.95\n",
     "\n",
     "def get_weighted_y(series):\n",
@@ -209,16 +246,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def fitInitialScript3(coeff1=.65, coeff2=.95):\n",
-    "    env = kagglegym.make()\n",
-    "    o = env.reset()\n",
-    "    \n",
     "    def get_weighted_y(series):\n",
     "        id, y = series[\"id\"], series[\"y\"]\n",
     "    # return 0.95 * y + 0.05 * ymean_dict[id] if id in ymean_dict else y\n",
@@ -270,47 +304,8 @@
     "        if done:\n",
     "            break\n",
     "    \n",
-    "    print(\"coeff1=\",coeff1, \"coeff2=\", coeff2, \\\n",
-    "                  \"r=\",info[\"public_score\"])"
+    "    print(info)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jingguo/anaconda/lib/python3.5/site-packages/ipykernel/__main__.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    }
-   ],
-   "source": [
-    "n=5\n",
-    "x=-.075+np.arange(-n,n+1)/(n)*.01\n",
-    "y=.075+np.arange(-n,n+1)/(n)*.01\n",
-    "w=.65+np.arange(-n,n+1)/(n)*.05\n",
-    "z=.95+np.arange(-n,n+1)/(n)*.05\n",
-    "for i in w:\n",
-    "    fitInitialScript3(i,.95)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
