--- a/Models/initial_script3.1.ipynb
+++ b/Models/initial_script3.1.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -290,6 +290,23 @@
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coeff1= 0.6 coeff2= 0.95 r= 0.0217693715305\n",
+      "coeff1= 0.61 coeff2= 0.95 r= 0.0217686667697\n",
+      "coeff1= 0.62 coeff2= 0.95 r= 0.0217672785704\n",
+      "coeff1= 0.63 coeff2= 0.95 r= 0.021765206802\n",
+      "coeff1= 0.64 coeff2= 0.95 r= 0.0217624512691\n",
+      "coeff1= 0.65 coeff2= 0.95 r= 0.0217590117119\n",
+      "coeff1= 0.66 coeff2= 0.95 r= 0.0217548878061\n",
+      "coeff1= 0.67 coeff2= 0.95 r= 0.0217500791624\n",
+      "coeff1= 0.68 coeff2= 0.95 r= 0.0217445853265\n",
+      "coeff1= 0.69 coeff2= 0.95 r= 0.0217384057788\n",
+      "coeff1= 0.7 coeff2= 0.95 r= 0.0217315399345\n"
      ]
     }
    ],
