--- a/Models/stackingEnsembleOptimized-collinearity.ipynb
+++ b/Models/stackingEnsembleOptimized-collinearity.ipynb
@@ -2,13 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jiguo\\AppData\\Local\\Enthought\\Canopy\\User\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "C:\\Users\\jiguo\\AppData\\Local\\Enthought\\Canopy\\User\\lib\\site-packages\\sklearn\\grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.grid_search import GridSearchCV\n",
     "import xgboost as xgb\n",
@@ -120,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -128,7 +139,7 @@
    },
    "outputs": [],
    "source": [
-    "class LR_tech_20():\n",
+    "class LR_tech():\n",
     "    def __init__(self, d_mean, col, low_y_cut=-0.085, high_y_cut=0.075, n_jobs=-1):\n",
     "        self.low_y_cut = low_y_cut\n",
     "        self.high_y_cut = high_y_cut\n",
@@ -143,11 +154,11 @@
     "        y_is_above_cut = (y_train > self.high_y_cut)\n",
     "        y_is_below_cut = (y_train < self.low_y_cut)\n",
     "        y_is_within_cut = (~y_is_above_cut & ~y_is_below_cut)\n",
-    "        self.model.fit(np.array(X_train.loc[y_is_within_cut, 'technical_20'].values).\\\n",
-    "                                      reshape(-1,1), y_train.loc[y_is_within_cut])\n",
+    "        self.model.fit(np.array(X_train.loc[y_is_within_cut, self.col].values).\\\n",
+    "                                      reshape(-1,len(self.col)), y_train.loc[y_is_within_cut])\n",
     "\n",
     "    def predict(self, X_test):\n",
-    "        return self.model.predict(np.array(X_test[self.col].fillna(self.d_mean)['technical_20'].values).\\\n",
+    "        return self.model.predict(np.array(X_test[self.col].fillna(self.d_mean).values).\\\n",
     "                                  reshape(-1,1)).clip(self.low_y_cut, self.high_y_cut)"
    ]
   },
@@ -201,27 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LR coeff=[ 0.4769837]\n",
-      "reward LR=-17.1921378667\n",
-      "6.08551907539\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start=time()\n",
     "n_folds = 2\n",
-    "ensembleObjLR=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=-1),                      base_models=[[LR_tech_20(d_mean=d_mean, col=col, n_jobs=-1) for i in range(n_folds)]])\n",
+    "colLR=['technical_20']\n",
+    "ensembleObjLR=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=-1), \\\n",
+    "                       base_models=[[LR_tech(d_mean=d_mean, col=colLR, low_y_cut=-0.085, high_y_cut=0.075, \\\n",
+    "                                                n_jobs=-1) for i in range(n_folds)]])\n",
     "ensembleObjLR.fit(X=X_train, y=y_train) \n",
     "predLR=pd.DataFrame()\n",
     "predLR['y'] = ensembleObjLR.predict(T=X_test)\n",
@@ -235,23 +239,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RFR coeff=[ 1.08232776]\n",
-      "reward RFR=-16.5156619523\n",
-      "281.738570929\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start=time()\n",
     "n_folds = 2\n",
@@ -303,7 +297,7 @@
    },
    "outputs": [],
    "source": [
-    "np.corrcoef([predLR.y, predRFR.y, predXGB])"
+    "np.corrcoef([predLR.y, predRFR.y, predXGB.y])"
    ]
   },
   {
@@ -382,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
