--- a/Models/stackingEnsembleOptimized-collinearity.ipynb
+++ b/Models/stackingEnsembleOptimized-collinearity.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -140,12 +140,13 @@
    "outputs": [],
    "source": [
     "class LR_tech():\n",
-    "    def __init__(self, d_mean, col, low_y_cut=-0.085, high_y_cut=0.075, n_jobs=-1):\n",
+    "    def __init__(self, d_mean, col, colLR=['technical_20'], low_y_cut=-0.085, high_y_cut=0.075, n_jobs=-1):\n",
     "        self.low_y_cut = low_y_cut\n",
     "        self.high_y_cut = high_y_cut\n",
     "        self.model=LinearRegression(n_jobs=n_jobs)\n",
     "        self.d_mean=d_mean\n",
     "        self.col=col\n",
+    "        self.colLR=colLR\n",
     "        \n",
     "    def fit(self, X_train, y_train):\n",
     "        #d_mean= x_train.median(axis=0)\n",
@@ -154,8 +155,8 @@
     "        y_is_above_cut = (y_train > self.high_y_cut)\n",
     "        y_is_below_cut = (y_train < self.low_y_cut)\n",
     "        y_is_within_cut = (~y_is_above_cut & ~y_is_below_cut)\n",
-    "        self.model.fit(np.array(X_train.loc[y_is_within_cut, self.col].values).\\\n",
-    "                                      reshape(-1,len(self.col)), y_train.loc[y_is_within_cut])\n",
+    "        self.model.fit(np.array(X_train.loc[y_is_within_cut, self.colLR].values).\\\n",
+    "                                      reshape(-1,len(self.colLR)), y_train.loc[y_is_within_cut])\n",
     "\n",
     "    def predict(self, X_test):\n",
     "        return self.model.predict(np.array(X_test[self.col].fillna(self.d_mean).values).\\\n",
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -224,7 +225,7 @@
     "n_folds = 2\n",
     "colLR=['technical_20']\n",
     "ensembleObjLR=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=-1), \\\n",
-    "                       base_models=[[LR_tech(d_mean=d_mean, col=colLR, low_y_cut=-0.085, high_y_cut=0.075, \\\n",
+    "                       base_models=[[LR_tech(d_mean=d_mean, col=col, colLR=colLR, low_y_cut=-0.085, high_y_cut=0.075, \\\n",
     "                                                n_jobs=-1) for i in range(n_folds)]])\n",
     "ensembleObjLR.fit(X=X_train, y=y_train) \n",
     "predLR=pd.DataFrame()\n",
