--- a/Models/stackingEnsembleOptimized-collinearity.ipynb
+++ b/Models/stackingEnsembleOptimized-collinearity.ipynb
@@ -22,7 +22,7 @@
    ],
    "source": [
     "from sklearn.grid_search import GridSearchCV\n",
-    "import xgboost as xgb\n",
+    "#import xgboost as xgb\n",
     "import kagglegym\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -140,12 +140,12 @@
    "outputs": [],
    "source": [
     "class LR_tech():\n",
-    "    def __init__(self, d_mean, col, colLR=['technical_20'], low_y_cut=-0.085, high_y_cut=0.075, n_jobs=-1):\n",
+    "    def __init__(self, d_mean, colLR=['technical_20'], low_y_cut=-0.085, high_y_cut=0.075, n_jobs=-1):\n",
     "        self.low_y_cut = low_y_cut\n",
     "        self.high_y_cut = high_y_cut\n",
     "        self.model=LinearRegression(n_jobs=n_jobs)\n",
     "        self.d_mean=d_mean\n",
-    "        self.col=col\n",
+    "        #self.col=col\n",
     "        self.colLR=colLR\n",
     "        \n",
     "    def fit(self, X_train, y_train):\n",
@@ -159,13 +159,13 @@
     "                                      reshape(-1,len(self.colLR)), y_train.loc[y_is_within_cut])\n",
     "\n",
     "    def predict(self, X_test):\n",
-    "        return self.model.predict(np.array(X_test[self.col].fillna(self.d_mean).values).\\\n",
-    "                                  reshape(-1,1)).clip(self.low_y_cut, self.high_y_cut)"
+    "        return self.model.predict(np.array(X_test[self.colLR].fillna(self.d_mean).values).\\\n",
+    "                                  reshape(-1,len(self.colLR))).clip(self.low_y_cut, self.high_y_cut)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -213,19 +213,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reward LR=0.972964865045\n"
+     ]
+    }
+   ],
+   "source": [
+    "colLR=['technical_30', 'technical_20', 'fundamental_11', 'technical_19']\n",
+    "tmpModel=LR_tech(d_mean=d_mean, colLR=colLR, low_y_cut=-0.075, high_y_cut=0.075, \\\n",
+    "                                                n_jobs=-1)\n",
+    "tmpModel.fit(X_train, y_train) \n",
+    "predLR=pd.DataFrame()\n",
+    "predLR['y'] = tmpModel.predict(X_test)\n",
+    "# predLR['y'] = predLR.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']]\\\n",
+    "#                           if r['id'] in ymean_dict else r['y'], axis = 1)\n",
+    "#print(\"LR coeff={}\".format(ensembleObjLR.stacker.coef_))\n",
+    "print(\"reward LR={}\".format(get_reward(y_test, predLR.y)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LR coeff=[ 0.82685598]\n",
+      "reward LR=0.972971869725\n",
+      "2.0119998455\n"
+     ]
+    }
+   ],
    "source": [
     "start=time()\n",
     "n_folds = 2\n",
-    "colLR=['technical_20']\n",
+    "colLR=['technical_30', 'technical_20', 'fundamental_11', 'technical_19']\n",
     "ensembleObjLR=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=-1), \\\n",
-    "                       base_models=[[LR_tech(d_mean=d_mean, col=col, colLR=colLR, low_y_cut=-0.085, high_y_cut=0.075, \\\n",
+    "                       base_models=[[LR_tech(d_mean=d_mean, colLR=colLR, low_y_cut=-0.075, high_y_cut=0.075, \\\n",
     "                                                n_jobs=-1) for i in range(n_folds)]])\n",
     "ensembleObjLR.fit(X=X_train, y=y_train) \n",
     "predLR=pd.DataFrame()\n",
@@ -233,20 +269,30 @@
     "# predLR['y'] = predLR.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']]\\\n",
     "#                           if r['id'] in ymean_dict else r['y'], axis = 1)\n",
     "print(\"LR coeff={}\".format(ensembleObjLR.stacker.coef_))\n",
-    "print(\"reward LR={}\".format(get_reward(predLR.y, y_test)))\n",
+    "print(\"reward LR={}\".format(get_reward(y_test, predLR.y)))\n",
     "end = time()\n",
     "print(end - start)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RFR coeff=[ 1.08232776]\n",
+      "reward RFR=0.97297960427\n",
+      "71.7309999466\n"
+     ]
+    }
+   ],
    "source": [
     "start=time()\n",
     "n_folds = 2\n",
@@ -257,7 +303,7 @@
     "#predRFR['y'] = predRFR.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']]\\\n",
     "#                             if r['id'] in ymean_dict else r['y'], axis = 1)\n",
     "print(\"RFR coeff={}\".format(ensembleObjRFR.stacker.coef_))\n",
-    "print(\"reward RFR={}\".format(get_reward(predRFR.y, y_test)))\n",
+    "print(\"reward RFR={}\".format(get_reward(y_test, predRFR.y)))\n",
     "end = time()\n",
     "print(end - start)\n"
    ]
@@ -283,7 +329,7 @@
     "#predXGB['y'] = predXGB.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']] \\\n",
     "#                             if r['id'] in ymean_dict else r['y'], axis = 1)\n",
     "print(\"XGB coeff={}\".format(ensembleObjXGB.stacker.coef_))\n",
-    "print(\"reward XGB={}\".format(get_reward(predXGB.y, y_test)))\n",
+    "print(\"reward XGB={}\".format(get_reward(y_test, predXGB.y,)\n",
     "end = time()\n",
     "print(end - start)"
    ]
